home page : added title panel.. styled it

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,10 +29,52 @@ SUGGESTION ONDELUM PARAYA..
 
     <div class="title-panel">
       <h1>FindIt</h1>
-      <p>Helping GECT Students reconnect with their lost belongings.</p>
+      <p>Helping GECians reconnect with their lost belongings.</p>
       <div class="title-panel__Btns">
-        <button class="btn-primary">Report Lost Item</button>
-        <button class="btn-primary">Report Found Item</button>
+        <a href="./pages/lost/lost.html" class="btn-primary title-panel-btn">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="20"
+            height="20"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="lucide lucide-circle-plus-icon lucide-circle-plus"
+          >
+            <circle cx="12" cy="12" r="10" />
+            <path d="M8 12h8" />
+            <path d="M12 8v8" />
+          </svg>
+          <p>Report Lost Item</p>
+        </a>
+        <a
+          href="./pages/found/found.html"
+          class="btn-primary title-panel-btn report-found-btn"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="20"
+            height="20"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="lucide lucide-package-icon lucide-package"
+          >
+            <path
+              d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z"
+            />
+            <path d="M12 22V12" />
+            <polyline points="3.29 7 12 12 20.71 7" />
+            <path d="m7.5 4.27 9 5.15" />
+          </svg>
+          <p>Report Found Item</p>
+        </a>
       </div>
     </div>
   </body>
