--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,6 +17,7 @@ SUGGESTION ONDELUM PARAYA..
     <link rel="stylesheet" href="./shared/navbar/navbar.css" />
     <link rel="stylesheet" href="./shared/theme.css" />
     <link rel="stylesheet" href="./shared/global.css" />
+    <link rel="stylesheet" href="./shared/footer/footer.css" />
     <link rel="stylesheet" href="style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -77,6 +78,10 @@ SUGGESTION ONDELUM PARAYA..
         </a>
       </div>
     </div>
+
+    <footer class=".footer">
+      <p>&copy; 2026 Findit. All rights reserved.</p>
+    </footer>
   </body>
   <script src="./shared/navbar/navbar.js"></script>
   <script src="./shared/navbar/navbar-component.js"></script>
