--- a/frontend/pages/register/register.html
+++ b/frontend/pages/register/register.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../../shared/navbar/navbar.css" />
     <link rel="stylesheet" href="../../shared/theme.css" />
     <link rel="stylesheet" href="../../shared/global.css" />
+    <link rel="stylesheet" href="../../shared/footer/footer.css" />
 
     <link rel="stylesheet" href="register.html" />
     <meta charset="UTF-8" />
@@ -20,6 +21,10 @@
   <body>
     <div id="navbar-container"></div>
     <p>Register page.. write code .. remove this line</p>
+
+    <footer class=".footer">
+      <p>&copy; 2026 Findit. All rights reserved.</p>
+    </footer>
   </body>
   <script src="../../shared/navbar/navbar.js"></script>
   <script src="../../shared/navbar/navbar-component.js"></script>
