file structure done

--- a/frontend/pages/login/login.html
+++ b/frontend/pages/login/login.html
@@ -19,10 +19,16 @@
     <title>Find it</title>
   </head>
   <body>
+    <!-- navigation bar will be inserted here automatically.. dont touch This
+    ignore -->
     <div id="navbar-container"></div>
+
+    <!-- remove this line by the way.. this is just for your reference.. start coding from here..
+  dont remove the footer at bottom.. 
+  dont remove that div with navbar-container id.. thats for injecting navbar.. ignore that too.. -->
     <p>Login page.. write code .. remove this line</p>
 
-    <footer class=".footer">
+    <footer class="footer">
       <p>&copy; 2026 Findit. All rights reserved.</p>
     </footer>
   </body>
