--- a/frontend/pages/my-posts/my-posts.html
+++ b/frontend/pages/my-posts/my-posts.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../../shared/global.css" />
     <link rel="stylesheet" href="../../shared/footer/footer.css" />
 
-    <link rel="stylesheet" href="register.css" />
+    <link rel="stylesheet" href="my-posts.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Find it</title>
@@ -22,10 +22,11 @@
     <!-- navigation bar will be inserted here automatically.. dont touch This
     ignore -->
     <div id="navbar-container"></div>
+
     <!-- remove this line by the way.. this is just for your reference.. start coding from here..
   dont remove the footer at bottom.. 
   dont remove that div with navbar-container id.. thats for injecting navbar.. ignore that too.. -->
-    <p>Register page.. write code .. remove this line</p>
+    <p>My posts stuff page.. write code .. remove this line</p>
 
     <footer class="footer">
       <p>&copy; 2026 Findit. All rights reserved.</p>
@@ -33,5 +34,5 @@
   </body>
   <script src="../../shared/navbar/navbar.js"></script>
   <script src="../../shared/navbar/navbar-component.js"></script>
-  <script src="register.js"></script>
+  <script src="my-posts.js"></script>
 </html>
