--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,7 +32,10 @@ SUGGESTION ONDELUM PARAYA..
       <h1>FindIt</h1>
       <p>Helping GECians reconnect with their lost belongings.</p>
       <div class="title-panel__Btns">
-        <a href="./pages/lost/lost.html" class="btn-primary title-panel-btn">
+        <a
+          href="./pages/post-lost/post-lost.html"
+          class="btn-primary title-panel-btn"
+        >
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="20"
@@ -52,7 +55,7 @@ SUGGESTION ONDELUM PARAYA..
           <p>Report Lost Item</p>
         </a>
         <a
-          href="./pages/found/found.html"
+          href="./pages/post-found/post-found.html"
           class="btn-primary title-panel-btn report-found-btn"
         >
           <svg
@@ -79,7 +82,397 @@ SUGGESTION ONDELUM PARAYA..
       </div>
     </div>
 
-    <footer class=".footer">
+    <!-- recently lost section -->
+    <div class="recents">
+      <div class="recents__heading-panel">
+        <h4>Recent Lost Items</h4>
+        <a href="./pages/lost/lost.html" class="view-all-btn"
+          ><p>View All</p>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="20"
+            height="20"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="lucide lucide-arrow-right-icon lucide-arrow-right"
+          >
+            <path d="M5 12h14" />
+            <path d="m12 5 7 7-7 7" />
+          </svg>
+        </a>
+      </div>
+
+      <div class="recents__grid">
+        <div class="item-card">
+          <div class="item-card__image">
+            <img
+              src="https://images.unsplash.com/photo-1553062407-98eeb64c6a62?w=800"
+              alt="Blue Backpack"
+            />
+          </div>
+
+          <div class="item-card__content">
+            <h3 class="item-card__title">Blue Backpack</h3>
+
+            <p class="item-card__description">
+              Navy blue backpack with laptop and textbooks
+            </p>
+
+            <div class="item-card__meta">
+              <div class="item-card__meta-row">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path d="M20 10c0 6-8 11-8 11S4 16 4 10a8 8 0 0 1 16 0Z" />
+                  <circle cx="12" cy="10" r="3" />
+                </svg>
+                <span>University Library, 2nd floor</span>
+              </div>
+
+              <div class="item-card__meta-row">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <rect width="18" height="18" x="3" y="4" rx="2" />
+                  <path d="M16 2v4M8 2v4M3 10h18" />
+                </svg>
+                <span>February 17, 2026</span>
+              </div>
+            </div>
+
+            <a href="#" class="btn-primary item-card__btn"> View Details </a>
+          </div>
+        </div>
+        <div class="item-card">
+          <div class="item-card__image">
+            <img
+              src="https://images.unsplash.com/photo-1553062407-98eeb64c6a62?w=800"
+              alt="Blue Backpack"
+            />
+          </div>
+
+          <div class="item-card__content">
+            <h3 class="item-card__title">Blue Backpack</h3>
+
+            <p class="item-card__description">
+              Navy blue backpack with laptop and textbooks
+            </p>
+
+            <div class="item-card__meta">
+              <div class="item-card__meta-row">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path d="M20 10c0 6-8 11-8 11S4 16 4 10a8 8 0 0 1 16 0Z" />
+                  <circle cx="12" cy="10" r="3" />
+                </svg>
+                <span>University Library, 2nd floor</span>
+              </div>
+
+              <div class="item-card__meta-row">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <rect width="18" height="18" x="3" y="4" rx="2" />
+                  <path d="M16 2v4M8 2v4M3 10h18" />
+                </svg>
+                <span>February 17, 2026</span>
+              </div>
+            </div>
+
+            <a href="#" class="btn-primary item-card__btn"> View Details </a>
+          </div>
+        </div>
+        <div class="item-card">
+          <div class="item-card__image">
+            <img
+              src="https://images.unsplash.com/photo-1553062407-98eeb64c6a62?w=800"
+              alt="Blue Backpack"
+            />
+          </div>
+
+          <div class="item-card__content">
+            <h3 class="item-card__title">Blue Backpack</h3>
+
+            <p class="item-card__description">
+              Navy blue backpack with laptop and textbooks
+            </p>
+
+            <div class="item-card__meta">
+              <div class="item-card__meta-row">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path d="M20 10c0 6-8 11-8 11S4 16 4 10a8 8 0 0 1 16 0Z" />
+                  <circle cx="12" cy="10" r="3" />
+                </svg>
+                <span>University Library, 2nd floor</span>
+              </div>
+
+              <div class="item-card__meta-row">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <rect width="18" height="18" x="3" y="4" rx="2" />
+                  <path d="M16 2v4M8 2v4M3 10h18" />
+                </svg>
+                <span>February 17, 2026</span>
+              </div>
+            </div>
+
+            <a href="#" class="btn-primary item-card__btn"> View Details </a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- recently Found section -->
+    <div class="recents">
+      <div class="recents__heading-panel">
+        <h4>Recent Found Items</h4>
+        <a href="./pages/found/found.html" class="view-all-btn"
+          ><p>View All</p>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="20"
+            height="20"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="lucide lucide-arrow-right-icon lucide-arrow-right"
+          >
+            <path d="M5 12h14" />
+            <path d="m12 5 7 7-7 7" />
+          </svg>
+        </a>
+      </div>
+
+      <div class="recents__grid">
+        <div class="item-card">
+          <div class="item-card__image">
+            <img src="" alt="Image not uploaded" />
+          </div>
+
+          <div class="item-card__content">
+            <h3 class="item-card__title">Black Leather Wallet</h3>
+
+            <p class="item-card__description">
+              Black leather wallet with driver's license and credit cards inside
+            </p>
+
+            <div class="item-card__meta">
+              <div class="item-card__meta-row">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path d="M20 10c0 6-8 11-8 11S4 16 4 10a8 8 0 0 1 16 0Z" />
+                  <circle cx="12" cy="10" r="3" />
+                </svg>
+                <span>Central Park, near the fountain</span>
+              </div>
+
+              <div class="item-card__meta-row">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <rect width="18" height="18" x="3" y="4" rx="2" />
+                  <path d="M16 2v4M8 2v4M3 10h18" />
+                </svg>
+                <span>February 15, 2026</span>
+              </div>
+            </div>
+
+            <a href="#" class="btn-primary item-card__btn"> View Details </a>
+          </div>
+        </div>
+        <div class="item-card">
+          <div class="item-card__image">
+            <img
+              src="https://images.unsplash.com/photo-1553062407-98eeb64c6a62?w=800"
+              alt="Blue Backpack"
+            />
+          </div>
+
+          <div class="item-card__content">
+            <h3 class="item-card__title">Blue Backpack</h3>
+
+            <p class="item-card__description">
+              Navy blue backpack with laptop and textbooks
+            </p>
+
+            <div class="item-card__meta">
+              <div class="item-card__meta-row">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path d="M20 10c0 6-8 11-8 11S4 16 4 10a8 8 0 0 1 16 0Z" />
+                  <circle cx="12" cy="10" r="3" />
+                </svg>
+                <span>University Library, 2nd floor</span>
+              </div>
+
+              <div class="item-card__meta-row">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <rect width="18" height="18" x="3" y="4" rx="2" />
+                  <path d="M16 2v4M8 2v4M3 10h18" />
+                </svg>
+                <span>February 17, 2026</span>
+              </div>
+            </div>
+
+            <a href="#" class="btn-primary item-card__btn"> View Details </a>
+          </div>
+        </div>
+        <div class="item-card">
+          <div class="item-card__image">
+            <img
+              src="https://images.unsplash.com/photo-1553062407-98eeb64c6a62?w=800"
+              alt="Blue Backpack"
+            />
+          </div>
+
+          <div class="item-card__content">
+            <h3 class="item-card__title">Blue Backpack</h3>
+
+            <p class="item-card__description">
+              Navy blue backpack with laptop and textbooks
+            </p>
+
+            <div class="item-card__meta">
+              <div class="item-card__meta-row">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path d="M20 10c0 6-8 11-8 11S4 16 4 10a8 8 0 0 1 16 0Z" />
+                  <circle cx="12" cy="10" r="3" />
+                </svg>
+                <span>University Library, 2nd floor</span>
+              </div>
+
+              <div class="item-card__meta-row">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <rect width="18" height="18" x="3" y="4" rx="2" />
+                  <path d="M16 2v4M8 2v4M3 10h18" />
+                </svg>
+                <span>February 17, 2026</span>
+              </div>
+            </div>
+
+            <a href="#" class="btn-primary item-card__btn"> View Details </a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- footer -->
+    <footer class="footer">
       <p>&copy; 2026 Findit. All rights reserved.</p>
     </footer>
   </body>
