--- a/frontend/pages/item/item.html
+++ b/frontend/pages/item/item.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../../shared/global.css" />
     <link rel="stylesheet" href="../../shared/footer/footer.css" />
 
-    <link rel="stylesheet" href="register.css" />
+    <link rel="stylesheet" href="item.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Find it</title>
@@ -25,7 +25,7 @@
     <!-- remove this line by the way.. this is just for your reference.. start coding from here..
   dont remove the footer at bottom.. 
   dont remove that div with navbar-container id.. thats for injecting navbar.. ignore that too.. -->
-    <p>Register page.. write code .. remove this line</p>
+    <p>Item page.. write code .. remove this line</p>
 
     <footer class="footer">
       <p>&copy; 2026 Findit. All rights reserved.</p>
@@ -33,5 +33,5 @@
   </body>
   <script src="../../shared/navbar/navbar.js"></script>
   <script src="../../shared/navbar/navbar-component.js"></script>
-  <script src="register.js"></script>
+  <script src="item.js"></script>
 </html>
